# SyncHell

./: .gitignore  AppRun (доб в апп дир)  CMakeLists.txt  CMakeLists_linux.txt  CMakeLists_windows.txt  CompileLinux.sh  CompileWindows.bat  README.md  SyncHell.desktop
assets/: stf.cl
include/: Collide.hpp  Game.hpp  Mood.hpp  Projectile.hpp  STF.hpp  STFGram.hpp  Spectro.hpp
levels/: README.md  convert.sh
python/: stf_mood_centroids.py
src/: collide.cpp  main.cpp
src/analysis/: STF.cpp  STFGram.cpp  Spectro.cpp
src/game/: cycle.cpp  game_control.cpp  game_init.cpp  projectile_spawn.cpp
src/scripts/: getSources.sh
winlibs/: README.md
